# =================================================================================================
# This code is part of PyLith, developed through the Computational Infrastructure
# for Geodynamics (https://github.com/geodynamics/pylith).
#
# Copyright (c) 2010-2023, University of California, Davis and the PyLith Development Team.
# All rights reserved.
#
# See https://mit-license.org/ and LICENSE.md and for license information. 
# =================================================================================================

dist_noinst_PYTHON = \
	downloads.py \
	format_pydocs.py \
	format_source.py

EXTRA_DIST = \
	autopep8.cfg \
	uncrustify.cfg

# End of file 
