# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
# Brad T. Aagaard, U.S. Geological Survey
# Charles A. Williams, GNS Science
# Matthew G. Knepley, University at Buffalo
#
# This code was developed as part of the Computational Infrastructure
# for Geodynamics (http://geodynamics.org).
#
# Copyright (c) 2010-2021 University of California, Davis
#
# See LICENSE.md for license information.
#
# ----------------------------------------------------------------------
#

dist_noinst_DATA = \
	conf.py \
	requirements.txt \
	_static/css/custom.css \
	_static/images/cig_logo_dots.png \
	_static/images/cig_short_nolabel.png \
	_static/images/cig_short_pylith.png \
	_templates/sidebase-cig.html \
	palettes/figcolors.tex \
	index.md \
	references.bib \
	references.md \
	intro/index.md \
	intro/quickstart.md \
	intro/release-notes.md \
	intro/development-plan.md \
	intro/images/easy.png \
	intro/images/intermediate.png \
	intro/images/difficult.png \
	intro/images/expert.png \
	user/index.md \
	user/preface.md \
	user/intro/index.md \
	user/intro/figs/workflow.tex \
	user/intro/figs/workflow.pdf \
	user/intro/figs/workflow.jpg \
	user/install/index.md \
	user/install/figs/installchoices.tex \
	user/install/figs/installchoices.pdf \
	user/install/figs/installchoices.jpg \
	user/examples/index.md \
	user/examples/examples-other.md \
	user/examples/paraview-python.md \
	user/2d/box/index.md \
	user/3d/box/index.md \
	user/2d/strikeslip/index.md \
	user/2d/reverse/index.md \
	user/2d/reverse/meshing.md \
	user/2d/reverse/figs/geometry.pdf \
	user/2d/reverse/figs/geometry.png \
	user/2d/subduction/index.md \
	user/3d/subduction/index.md


# End of file 
